# deepstation-community

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  celery_src.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  constants.py  main.py
app/dependencies/: auth.py
app/fixtures/: bot.py  bot_details.py  community_fixtures.py
app/fixtures/blast/: lead_list.py
app/fixtures/community/: community_fixtures.py
app/fixtures/events/: luma.py
app/fixtures/guidelines/: pricing_guidelines.py
app/models/: model.py
app/prompts/emails/: emails_prompt_templates.py
app/prompts/sms/: blasts_prompts.py  community_support_prompts.py
app/pydantic_models/: pydantic_index.py
app/repository/: campaigns_repository.py  clients_repository.py  company_information_repository.py  conversations_repository.py  leads_repository.py
app/routers/: campaigns_router.py  client_router.py  company_information_router.py  lead_router.py  sms_router.py
app/routers/emails/: emails_router.py
app/services/email/: email_community_support_services.py  email_services.py
app/services/sms/: community_support_services.py
app/tasks/: sms_tasks.py
migrations/models/: 0_20250708052828_init.py  1_20250715223325_update.py  2_20250716015302_update.py  3_20250716173933_update.py  4_20250717180038_update.py
