[tool.aerich]
tortoise_orm = "app.config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "deepstation"
version = "0.1.0"
description = "AI-powered community builder"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
starlette = "^0.46.2"
tortoise-orm = "^0.25.0"
twilio = "^9.6.1"
python-dotenv = "^1.1.0"
pydantic = "^2.11.4"
uvicorn = "^0.34.2"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
asyncmy = "^0.2.10"
openai = "^1.82.0"
aerich = "^0.9.0"
tomlkit = "^0.13.2"
tomli = "^2.2.1"
python-multipart = "^0.0.20"
celery = "^5.5.2"
redis = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

